<resources>
    <string name="app_name">Platzigram</string>
    <string name="title_activity_referencia">ReferenciaActivity</string>
    <!-- Strings used for fragments for navigation -->
    <string name="first_fragment_label">First Fragment</string>
    <string name="second_fragment_label">Second Fragment</string>
    <string name="next">Next</string>
    <string name="previous">Previous</string>
    <string name="hint_username">Nombre de usuario</string>

    <string name="hello_first_fragment">Hello first fragment</string>
    <string name="hello_second_fragment">Hello second fragment. Arg: %1$s</string>
    <string name="hint_password">Contraseña</string>
    <string name="text_button_login">Login</string>
    <string name="dont_have_account">¿No tienes cuenta?,</string>
    <string name="create_here">Crea una aquí</string>
    <string name="hint_email">Correo</string>
    <string name="hint_name">Nombre</string>
    <string name="hint_user">Usuario</string>
    <string name="hint_confirm_password">Confirmar contraseña</string>
    <string name="text_button_createaccount">únete</string>
    <string name="toolbar_tittle_createaccount">Crear Cuenta</string>
    <string name="hint_username_createaccount">Nombre</string>
    <string name="username_card">Uriel Ramirez</string>
    <string name="firstword_card">Hace</string>
    <string name="timecard_card">4 dias</string>
    <string name="likenumbercard_card">10 Me gusta</string>
    <string name="tab_search">Buscar</string>
    <string name="tab_home">Home</string>
    <string name="tab_profile">Yo</string>
    <string name="login_error">Ocurrió este error:</string>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="secondword_detail">Me gusta</string>
    <string name="titleimagedetail">\"Todo copas en la playa\"</string>
    <string name="lorem">El más importante de los galardones individuales de LaLiga Santander es el Premio Pichichi que se concede al máximo anotador de la competición. Leo Messi volvió a ganarlo la temporada pasada, gracias a sus 36 goles, y está ahora empatado en el ránking histórico del Pichichi con el mítico delantero del Athletic Telmo Zarra, que lideraba el palmarés en solitario desde la temporada 1952-1953, con seis galardones cada uno. El más importante de los galardones individuales de LaLiga Santander es el Premio Pichichi que se concede al máximo anotador de la competición. Leo Messi volvió a ganarlo la temporada pasada, gracias a sus 36 goles, y está ahora empatado en el ránking histórico del Pichichi con el mítico delantero del Athletic Telmo Zarra, que lideraba el palmarés en solitario desde la temporada 1952-1953, con seis galardones cada uno. El más importante de los galardones individuales de LaLiga Santander es el Premio Pichichi que se concede al máximo anotador de la competición. Leo Messi volvió a ganarlo la temporada pasada, gracias a sus 36 goles, y está ahora empatado en el ránking histórico del Pichichi con el mítico delantero del Athletic Telmo Zarra, que lideraba el palmarés en solitario desde la temporada 1952-1953, con seis galardones cada uno.</string>
    <string name="transitionName_Picture">transitionNamePicture</string>
    <string name="hint_title">Titulo</string>
    <string name="hint_description">Descripción</string>
    <string name="text_button_createPost">Crear Post</string>


</resources>
