<?xml version="1.0" encoding="utf-8"?>
<androidx.coordinatorlayout.widget.CoordinatorLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="view.CreateAccountActivity"
    android:fitsSystemWindows="true">

    <include layout="@layout/actionbar_toolbar"/>

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:fillViewport="true"
        app:layout_behavior="@string/appbar_scrolling_view_behavior">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="vertical"
            android:padding="@dimen/padding_horizontal_createuser">

            <com.google.android.material.textfield.TextInputLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                app:hintTextAppearance="@style/TextLayoutFloatingLabelBlack">

                <com.google.android.material.textfield.TextInputEditText
                    android:id="@+id/username_createaccount"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:hint="@string/hint_username_createaccount"
                    android:textColor="@color/editTextColorBlack"
                    android:textSize="22sp"
                    android:layout_marginTop="@dimen/edittext_margin_createaccount"
                    android:theme="@style/EditTextBlack"/>
            </com.google.android.material.textfield.TextInputLayout>

            <com.google.android.material.textfield.TextInputLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                app:hintTextAppearance="@style/TextLayoutFloatingLabelBlack">

                <com.google.android.material.textfield.TextInputEditText
                    android:id="@+id/email"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:theme="@style/EditTextBlack"
                    android:hint="@string/hint_email"
                    android:textColor="@color/editTextColorBlack"
                    android:textSize="22sp"
                    android:layout_marginTop="@dimen/edittext_margin_createaccount"/>
            </com.google.android.material.textfield.TextInputLayout>

            <com.google.android.material.textfield.TextInputLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                app:hintTextAppearance="@style/TextLayoutFloatingLabelBlack">

                <com.google.android.material.textfield.TextInputEditText
                    android:id="@+id/user"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:theme="@style/EditTextBlack"
                    android:hint="@string/hint_username"
                    android:textColor="@color/editTextColorBlack"
                    android:textSize="22sp"
                    android:layout_marginTop="@dimen/edittext_margin_createaccount"/>
            </com.google.android.material.textfield.TextInputLayout>

            <com.google.android.material.textfield.TextInputLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                app:hintTextAppearance="@style/TextLayoutFloatingLabelBlack">

                <com.google.android.material.textfield.TextInputEditText
                    android:id="@+id/password_createaccount"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:theme="@style/EditTextBlack"
                    android:hint="@string/hint_password"
                    android:textColor="@color/editTextColorBlack"
                    android:layout_marginTop="@dimen/edittext_margin_createaccount"
                    android:inputType="textPassword"
                    />
            </com.google.android.material.textfield.TextInputLayout>

            <com.google.android.material.textfield.TextInputLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                app:hintTextAppearance="@style/TextLayoutFloatingLabelBlack">

                <com.google.android.material.textfield.TextInputEditText
                    android:id="@+id/password_confirmation_createaccount"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:theme="@style/EditTextBlack"
                    android:hint="@string/hint_confirm_password"
                    android:inputType="textPassword"
                    android:textColor="@color/editTextColorBlack"
                    android:layout_marginTop="@dimen/edittext_margin_createaccount"
                   />
            </com.google.android.material.textfield.TextInputLayout>

            <Button
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:id="@+id/joinUp"
                android:text="@string/text_button_createaccount"
                android:theme="@style/RaisedButtonDark"/>

        </LinearLayout>

    </ScrollView>

</androidx.coordinatorlayout.widget.CoordinatorLayout>
